# engine-demos

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json
assets/: assets.blend  castlebl.glb  collision_demo.yml  cone_with_collision.glb
assets/plugins/scripts/: CMakeLists.txt  Makefile  engine  scripts.cpp  scripts.hpp
assets/scenes/: 3d_demo.yml  collision_demo.yml  gltf_demo.yml  postfx_demo.yml  texture_demo.yml  viewport_demo.yml
assets/shaders/: halftone_postfx.glsl  transparent_postfx.glsl
assets/shaders/3d/: custom_uniform_example.glsl  light_falloff.glsl  simple.glsl
assets/shaders/postfx/: dither.glsl
cmake/: TC-windows.cmake
resources/: castlebl.glb
src/: CMakeLists.txt  imgui_menu_node.cpp  imgui_menu_node.hpp  main.cpp
src/3d_demo/: 3d_demo.cpp  3d_demo.hpp
src/collision_demo/: collision_SAT.cpp  collision_SAT.hpp  collision_demo.cpp  collision_demo.hpp
src/freecam_demo/: freecam_demo.cpp  freecam_demo.hpp
src/gltf_demo/: gltf_demo.cpp  gltf_demo.hpp
src/menu_demo/: menu_demo.cpp  menu_demo.hpp
src/postfx_demo/: postfx_demo.cpp  postfx_demo.hpp
src/texture_demo/: texture_demo.cpp  texture_demo.hpp
src/viewport_demo/: viewport_demo.cpp  viewport_demo.hpp
